--- a/20220927/WA50/WA50/Views/Home/Index.cshtml
+++ b/20220927/WA50/WA50/Views/Home/Index.cshtml
@@ -102,3 +102,10 @@ else
     <input type="search" name="filter"
         placeholder="type here ..." />
 </form>*@
+
+@section Scripts
+{
+    <script type="module">
+        console.log('Hello from Index');
+    </script>
+}
