--- a/20221025/WA70/WA70/Views/Home/Index.cshtml
+++ b/20221025/WA70/WA70/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model IEnumerable<Northwind.Store.Model.Product>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -8,3 +10,27 @@
 </div>
 
 <p>@ViewBag.welcome</p>
+
+@if (Model.Count() > 0)
+{
+    <div class="list-group list-group-flush">
+        @foreach (var p in Model)
+        {
+            <a asp-action="Add" asp-controller="Cart" asp-route-id="@p.ProductId"
+       class="list-group-item list-group-item-action">
+                <div class="row align-items-center">
+                    <div class="col-8">
+                        <p>
+                            @p.ProductName<br />
+                            <small>@(p.Category?.CategoryName)</small>
+                        </p>
+                    </div>
+                    <div class="col-2">@p.UnitPrice?.ToString("n")</div>
+                    <div class="col-1">
+                        <i class="bi bi-caret-right"></i>
+                    </div>
+                </div>
+            </a>
+        }
+    </div>
+}
