--- a/20221025/WA70/WA70/Views/Cart/Index.cshtml
+++ b/20221025/WA70/WA70/Views/Cart/Index.cshtml
@@ -1,5 +1,16 @@
 ﻿@model WA70.ViewModels.CartViewModel
 
+@{
+    var pa = (Product)ViewBag.productAdded;
+    var paName = TempData["ProductName"];
+}
+@if (pa != null)
+{
+    <div class="alert alert-info" role="alert">
+        Nuevo producto: @pa.ProductName!
+    </div>
+}
+
 @if (Model != null && Model.Items.Any())
 {
     <table class="table">
