--- a/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,10 @@
-﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+﻿<environment include="Development">
+    <script src="~/lib/jquery-validate/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="~/js/forms.min.js"></script>
+</environment>
+<environment exclude="Development">
+    <script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/js/forms.js"></script>
+</environment>
