--- a/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Category/Create.cshtml
+++ b/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Areas/Admin/Views/Category/Create.cshtml
@@ -24,8 +24,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Picture" class="control-label"></label>
-                <input type="file" name="Picture" class="form-control" />
-                <span asp-validation-for="Picture" class="text-danger"></span>
+@*                <input type="file" name="Picture" class="form-control" />
+                <span asp-validation-for="Picture" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
